Added wallet type selector and detect it on address form submit

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -180,6 +180,13 @@ each co-signer's address!</b></p>
     <p class="text-danger small"></p>
   </div>
 </div>
+<div class="form-group">
+  <label for="select-hardware-wallet-1">Select Hardware Wallet:</label>
+  <select class="form-control bootstrap-select signer-hardware-wallet" id="select-hardware-wallet-1">
+    <option>Trezor</option>
+    <option>Ledger</option>
+  </select>
+</div>
 
         <button type="submit" class="btn btn-primary">
 	  <i class="fa fa-upload"></i> &nbsp;
@@ -285,6 +292,13 @@ each co-signer's address!</b></p>
     <p class="text-danger small"></p>
   </div>
 </div>
+<div class="form-group">
+  <label for="select-hardware-wallet-2">Select Hardware Wallet:</label>
+  <select class="form-control bootstrap-select signer-hardware-wallet" id="select-hardware-wallet-2">
+    <option>Trezor</option>
+    <option>Ledger</option>
+  </select>
+</div>
 
         <button type="submit" class="btn btn-primary">
 	  <i class="fa fa-upload"></i> &nbsp;
@@ -389,6 +403,13 @@ each co-signer's address!</b></p>
     <input type="text" class="form-control form-control-sm signer-bip32-path" id="signer-3-bip32-path" aria-describedby="signer-3-bip32-help" value="m/45'/60'/0'/0/0" required>
     <p class="text-danger small"></p>
   </div>
+</div>
+<div class="form-group">
+  <label for="select-hardware-wallet-3">Select Hardware Wallet:</label>
+  <select class="form-control bootstrap-select signer-hardware-wallet" id="select-hardware-wallet-3">
+    <option>Trezor</option>
+    <option>Ledger</option>
+  </select>
 </div>
 
         <button type="submit" class="btn btn-primary">
