--- a/public/spend/index.html
+++ b/public/spend/index.html
@@ -345,6 +345,13 @@ signature via a (preferably secure) side-channel such as email.</p>
     <p class="text-danger small"></p>
   </div>
 </div>
+<div class="form-group">
+  <label for="select-hardware-wallet-1">Select Hardware Wallet:</label>
+  <select class="form-control bootstrap-select signer-hardware-wallet" id="select-hardware-wallet-1">
+    <option>Trezor</option>
+    <option>Ledger</option>
+  </select>
+</div>
 
 	<button type="submit" class="btn btn-primary">
 	  <i class="fa fa-thumbs-up"></i> &nbsp;
@@ -467,6 +474,13 @@ signature via a (preferably secure) side-channel such as email.</p>
     <input type="text" class="form-control form-control-sm signer-bip32-path" id="signer-2-bip32-path" aria-describedby="signer-2-bip32-help" value="m/45'/60'/0'/0/0" required>
     <p class="text-danger small"></p>
   </div>
+</div>
+<div class="form-group">
+  <label for="select-hardware-wallet-2">Select Hardware Wallet:</label>
+  <select class="form-control bootstrap-select signer-hardware-wallet" id="select-hardware-wallet-2">
+    <option>Trezor</option>
+    <option>Ledger</option>
+  </select>
 </div>
 
 	<button type="submit" class="btn btn-primary">
