spending with ledger successful

--- a/public/spend/index.html
+++ b/public/spend/index.html
@@ -386,7 +386,10 @@ signature via a (preferably secure) side-channel such as email.</p>
   <dd class="col-10"><code class="signature-bip32-path"></code></dd>
 
 
-  <dt class="col-2">Signature</dt>
+  <dt class="col-2">Wallet Type</dt>
+  <dd class="col-10"><code class="wallet_type"></code></dd>
+
+  <dt class="col-2">Signature TEST</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
   <dt class="col-2">Signature R</dt>
@@ -414,7 +417,10 @@ signature via a (preferably secure) side-channel such as email.</p>
 
 
 
-  <dt class="col-2">Signature</dt>
+  <dt class="col-2">Wallet Type</dt>
+  <dd class="col-10"><code class="wallet_type"></code></dd>
+
+  <dt class="col-2">Signature TEST</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
   <dt class="col-2">Signature R</dt>
@@ -516,7 +522,10 @@ signature via a (preferably secure) side-channel such as email.</p>
   <dd class="col-10"><code class="signature-bip32-path"></code></dd>
 
 
-  <dt class="col-2">Signature</dt>
+  <dt class="col-2">Wallet Type</dt>
+  <dd class="col-10"><code class="wallet_type"></code></dd>
+
+  <dt class="col-2">Signature TEST</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
   <dt class="col-2">Signature R</dt>
@@ -544,7 +553,10 @@ signature via a (preferably secure) side-channel such as email.</p>
 
 
 
-  <dt class="col-2">Signature</dt>
+  <dt class="col-2">Wallet Type</dt>
+  <dd class="col-10"><code class="wallet_type"></code></dd>
+
+  <dt class="col-2">Signature TEST</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
   <dt class="col-2">Signature R</dt>
