manual signature entry working

--- a/public/spend/index.html
+++ b/public/spend/index.html
@@ -369,6 +369,10 @@ signature via a (preferably secure) side-channel such as email.</p>
 	  <label for="signature-1-signature-input">Signature</label>
 	  <input type="text" class="form-control form-control-sm signature-input" id="signer-1-signature-input" aria-describedby="signer-1-signature-help" required>
 	  <small id="signer-1-signature-help" class="form-text text-muted">Genearted by another instance of this application.</small>
+	  <select class="form-control bootstrap-select signer-hardware-wallet" id="select-hardware-wallet-1">
+	    <option>Trezor</option>
+	    <option>Ledger</option>
+	  </select>	  
 	</div>
 	<button type="submit" class="btn btn-primary">
 	  <i class="fa fa-plus"></i> &nbsp;
@@ -389,7 +393,7 @@ signature via a (preferably secure) side-channel such as email.</p>
   <dt class="col-2">Wallet Type</dt>
   <dd class="col-10"><code class="wallet_type"></code></dd>
 
-  <dt class="col-2">Signature TEST</dt>
+  <dt class="col-2">Signature</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
   <dt class="col-2">Signature R</dt>
@@ -420,7 +424,7 @@ signature via a (preferably secure) side-channel such as email.</p>
   <dt class="col-2">Wallet Type</dt>
   <dd class="col-10"><code class="wallet_type"></code></dd>
 
-  <dt class="col-2">Signature TEST</dt>
+  <dt class="col-2">Signature</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
   <dt class="col-2">Signature R</dt>
@@ -505,6 +509,10 @@ signature via a (preferably secure) side-channel such as email.</p>
 	  <label for="signature-2-signature-input">Signature</label>
 	  <input type="text" class="form-control form-control-sm signature-input" id="signer-2-signature-input" aria-describedby="signer-2-signature-help" required>
 	  <small id="signer-2-signature-help" class="form-text text-muted">Genearted by another instance of this application.</small>
+	  <select class="form-control bootstrap-select signer-hardware-wallet" id="select-hardware-wallet-2">
+	    <option>Trezor</option>
+	    <option>Ledger</option>
+	  </select>	  
 	</div>
 	<button type="submit" class="btn btn-primary">
 	  <i class="fa fa-plus"></i> &nbsp;
@@ -525,7 +533,7 @@ signature via a (preferably secure) side-channel such as email.</p>
   <dt class="col-2">Wallet Type</dt>
   <dd class="col-10"><code class="wallet_type"></code></dd>
 
-  <dt class="col-2">Signature TEST</dt>
+  <dt class="col-2">Signature</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
   <dt class="col-2">Signature R</dt>
@@ -556,7 +564,7 @@ signature via a (preferably secure) side-channel such as email.</p>
   <dt class="col-2">Wallet Type</dt>
   <dd class="col-10"><code class="wallet_type"></code></dd>
 
-  <dt class="col-2">Signature TEST</dt>
+  <dt class="col-2">Signature</dt>
   <dd class="col-10"><code class="signature-full"></code></dd>
 
   <dt class="col-2">Signature R</dt>
