--- a/public/create/index.html
+++ b/public/create/index.html
@@ -205,7 +205,9 @@
 	  Export Address
 	</button>
 	<p class="text-danger card-text trezor-errors"></p>
-	<p class="text-danger card-text ledger-warning"></p>	
+	<p class="text-danger card-text ledger-warning-http"></p>	
+	<p class="text-danger card-text ledger-warning"></p>
+	<p class="text-warning card-text ledger-tips"></p>		
       </form>
 
       <hr />
@@ -320,7 +322,9 @@
 	  Export Address
 	</button>
 	<p class="text-danger card-text trezor-errors"></p>
-	<p class="text-danger card-text ledger-warning"></p>	
+	<p class="text-danger card-text ledger-warning-http"></p>	
+	<p class="text-danger card-text ledger-warning"></p>
+	<p class="text-warning card-text ledger-tips"></p>		
       </form>
 
       <hr />
@@ -435,7 +439,9 @@
 	  Export Address
 	</button>
 	<p class="text-danger card-text trezor-errors"></p>
-	<p class="text-danger card-text ledger-warning"></p>	
+	<p class="text-danger card-text ledger-warning-http"></p>	
+	<p class="text-danger card-text ledger-warning"></p>
+	<p class="text-warning card-text ledger-tips"></p>		
       </form>
 
       <hr />
