--- a/public/spend/index.html
+++ b/public/spend/index.html
@@ -63,10 +63,10 @@
 <h1>Spend From Vault</h1>
 
 <p class="lead">This page spends from an existing 2/3-multisig smart
-contract using 2 Trezors.</p>
+contract using 2 hardware wallets.</p>
 
-<p>You and your co-signer will need a total of 2 Trezor hardware
-wallets.  Both Trezors do not need to be co-located.  Your co-signer
+<p>You and your co-signer will need a total of 2 hardware
+wallets.  Both wallets do not need to be co-located.  Your co-signer
 can use this application on their own computer and send you their
 signature via a (preferably secure) side-channel such as email.</p>
 
@@ -172,11 +172,16 @@ signature via a (preferably secure) side-channel such as email.</p>
 </dl>
 
 
-	<p>When you export a signature below, your Trezor will display
+	<p>If signing with a Trezor, it will display
 	the following message for you to sign:</p>
 
-	<pre><code id="spend-message"></code></pre>
+	<pre><code id="spend-message-trezor"></code></pre>
 	
+	<p>If signing with a Ledger, it will display
+	the following message for you to sign:</p>
+
+	<pre><code id="spend-message-ledger"></code></pre>
+
 	<p>Once both signature are obtained, you can broadcast this
 	  spend.</p>
 
