show suggested gas limit for spends

--- a/public/spend/index.html
+++ b/public/spend/index.html
@@ -185,6 +185,11 @@ signature via a (preferably secure) side-channel such as email.</p>
 	<p>Once both signature are obtained, you can broadcast this
 	  spend.</p>
 
+	<p>We recommend setting the gas limit for spends to 100000 gas. This dapp
+	  should automatically set the gas limit for the broadcasting transacation.
+	</p>
+
+
 	<div class="row">
 	  <div class="col-3">
 	    <form id="broadcast-spend-form">
