solium output clean

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -80,7 +80,7 @@
 
 <p>Approximate Gas Costs:
   <ul>
-    <li>Contract Creation: 975000</li>
+    <li>Contract Creation: 1170000</li>
     <li>Deposit ETH: 22512</li>
     <li>Withdraw ETH: 95000</li>
   </ul>
