--- a/public/index.html
+++ b/public/index.html
@@ -194,6 +194,7 @@ any contract created by this application.</p>
 
 <pre><code id="solidity-contract" class="solidity">pragma solidity ^0.4.24;
 
+
 // A 2/3 multisig contract compatible with Trezor or Ledger-signed messages.
 //
 // To authorize a spend, two signtures must be provided by 2 of the 3 owners.
@@ -230,7 +231,7 @@ contract MultiSig2of3 {
     uint256 public unchainedMultisigVersionMinor = 0;
 
     // An event sent when funds are received.
-    event Funded(uint new_balance);
+    event Funded(uint newBalance);
 
     // An event sent when a spend is triggered to the given address.
     event Spent(address to, uint transfer);
@@ -265,7 +266,9 @@ contract MultiSig2of3 {
     function generateMessageToSign(
         address destination,
         uint256 value
-    ) public view returns (bytes32) {
+    )
+        public view returns (bytes32)
+    {
         require(destination != address(this), "invalid destination");
         bytes32 message = keccak256(
             abi.encodePacked(
@@ -290,7 +293,9 @@ contract MultiSig2of3 {
         uint8 v2,
         bytes32 r2,
         bytes32 s2
-    ) public {
+    )
+        public
+    {
         // This require is handled by generateMessageToSign()
         // require(destination != address(this));
         require(address(this).balance &gt;= value, "insufficient balance");
@@ -315,10 +320,18 @@ contract MultiSig2of3 {
         uint256 value,
         uint8 v1, bytes32 r1, bytes32 s1,
         uint8 v2, bytes32 r2, bytes32 s2
-    ) private view returns (bool) {
+    )
+        private view returns (bool)
+    {
         bytes32 message = _messageToRecover(destination, value);
-        address addr1 = ecrecover(message, v1+27, r1, s1);
-        address addr2 = ecrecover(message, v2+27, r2, s2);
+        address addr1 = ecrecover(
+            message,
+            v1+27, r1, s1
+        );
+        address addr2 = ecrecover(
+            message,
+            v2+27, r2, s2
+        );
         require(_distinctOwners(addr1, addr2), "invalid owners");
 
         return true;
@@ -336,7 +349,9 @@ contract MultiSig2of3 {
     function _messageToRecover(
         address destination,
         uint256 value
-    ) private view returns (bytes32) {
+    )
+        private view returns (bytes32)
+    {
         bytes32 hashedUnsignedMessage = generateMessageToSign(
             destination,
             value
@@ -352,7 +367,9 @@ contract MultiSig2of3 {
     function _distinctOwners(
         address addr1,
         address addr2
-    ) private view returns (bool) {
+    )
+        private view returns (bool)
+    {
         // Check that both addresses are different
         require(addr1 != addr2, "invalid owners");
         // Check that both addresses are owners
@@ -378,8 +395,11 @@ contract MultiSig2of3 {
     // Convert from byte to ASCII of 0-f
     // http://www.unicode.org/charts/PDF/U0000.pdf
     function _char(byte b) private pure returns (byte c) {
-        if (b &lt; 10) return byte(uint8(b) + 0x30);
-        else return byte(uint8(b) + 0x57);
+        if (b &lt; 10) {
+            return byte(uint8(b) + 0x30);
+        } else {
+            return byte(uint8(b) + 0x57);
+        }
     }
 }
  </code></pre>
