--- a/public/create/index.html
+++ b/public/create/index.html
@@ -635,7 +635,7 @@
     <script type="text/javascript">
       window.TREZOR_POPUP_ORIGIN = "https://connect.trezor.io";
     </script>
-    <script type="text/javascript" src="https://connect.trezor.io/4/connect.js"></script>
+    <script type="text/javascript" src="https://connect.trezor.io/5/trezor-connect.js"></script>
   </body>
 </html>
 
