--- a/public/spend/index.html
+++ b/public/spend/index.html
@@ -714,7 +714,7 @@ signature via a (preferably secure) side-channel such as email.</p>
     <script type="text/javascript">
       window.TREZOR_POPUP_ORIGIN = "https://connect.trezor.io";
     </script>
-    <script type="text/javascript" src="https://connect.trezor.io/4/connect.js"></script>
+    <script type="text/javascript" src="https://connect.trezor.io/5/trezor-connect.js"></script>
   </body>
 </html>
 
