update events in readme and put our name in contract comments

--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,8 @@ any contract created by this application.</p>
 // 5: Invalid Signers. The provided signatures are correctly signed, but are
 //    not signed by the correct addresses. You must provide signatures from
 //    two of the owner addresses.
-
+//
+// Developed by Unchained Capital, Inc.
 
 
 
