--- a/public/error.html
+++ b/public/error.html
@@ -23,19 +23,19 @@
   <body>
     <nav class="navbar bg-light">
       <div class="container">
-	<a class="navbar-brand" href="./index.html">
+	<a class="navbar-brand" href="./index.html" target="_blank">
 	  <img src="./images/logo.png" alt="logo" /> 
-	  Ethereum Multisig Vault <small>v1.0</small>
+	  Ethereum Multisig Vault <small>v2.0</small>
 	</a>
 	<ul class="nav">
 	  <li class="nav-item d-none d-lg-inline-block">
-            <a href="./create/index.html" class="nav-link" >Create</a>
+            <a href="./create/index.html" class="nav-link" target="_blank">Create</a>
 	  </li>
 	  <li class="nav-item d-none d-lg-inline-block">
-            <a href="./spend/index.html" class="nav-link">Spend</a>
+            <a href="./spend/index.html" class="nav-link" target="_blank">Spend</a>
 	  </li>
 	  <li class="nav-item d-none d-lg-inline-block">
-            <a href="./" class="nav-link">Help</a>
+            <a href="./" class="nav-link" target="_blank">Help</a>
 	  </li>
 	</ul>
 	<button class="navbar-toggler d-xl-none" type="button" data-toggle="collapse" data-target="#mainNavContent" aria-controls="mainNavContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,13 +46,13 @@
 	<div id="mainNavContent" class="collapse">
 	  <ul class="navbar-nav">
             <li class="nav-item d-lg-none">
-              <a href="./index.html" class="nav-link">Create</a>
+              <a href="./index.html" class="nav-link" target="_blank">Create</a>
             </li>
             <li class="nav-item d-lg-none">
-              <a href="./spend/index.html" class="nav-link">Spend</a>
+              <a href="./spend/index.html" class="nav-link" target="_blank">Spend</a>
             </li>
             <li class="nav-item d-lg-none">
-              <a href="./help/index.html" class="nav-link">Help</a>
+              <a href="./help/index.html" class="nav-link" target="_blank">Help</a>
             </li>
 	  </ul>
 	</div>
@@ -69,7 +69,7 @@
     <script type="text/javascript">
       window.TREZOR_POPUP_ORIGIN = "https://connect.trezor.io";
     </script>
-    <script type="text/javascript" src="https://connect.trezor.io/4/connect.js"></script>
+    <script type="text/javascript" src="https://connect.trezor.io/5/trezor-connect.js"></script>
   </body>
 </html>
 
