--- a/public/error.html
+++ b/public/error.html
@@ -5,8 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Ethereum Multisig Vault" />
-    <title>Ethereum Multisig Vault</title>
+    <meta name="description" content="Ethereum Multisig" />
+    <title>Ethereum Multisig</title>
 
     <link rel="stylesheet" href="./css/dapp.css" />
 
@@ -25,14 +25,14 @@
       <div class="container">
 	<a class="navbar-brand" href="./index.html" target="_blank">
 	  <img src="./images/logo.png" alt="logo" /> 
-	  Ethereum Multisig Vault <small>v2.0</small>
+	  Ethereum Multisig <small>v2.0</small>
 	</a>
 	<ul class="nav">
 	  <li class="nav-item d-none d-lg-inline-block">
-            <a href="./create/index.html" class="nav-link" target="_blank">Create</a>
+            <a href="./publish/index.html" class="nav-link" target="_blank">Publish New </a>
 	  </li>
 	  <li class="nav-item d-none d-lg-inline-block">
-            <a href="./spend/index.html" class="nav-link" target="_blank">Spend</a>
+            <a href="./spend/index.html" class="nav-link" target="_blank">Spend from Existing</a>
 	  </li>
 	  <li class="nav-item d-none d-lg-inline-block">
             <a href="./" class="nav-link" target="_blank">Help</a>
@@ -46,13 +46,13 @@
 	<div id="mainNavContent" class="collapse">
 	  <ul class="navbar-nav">
             <li class="nav-item d-lg-none">
-              <a href="./index.html" class="nav-link" target="_blank">Create</a>
+              <a href="./publish/index.html" class="nav-link" target="_blank">Publish</a>
             </li>
             <li class="nav-item d-lg-none">
               <a href="./spend/index.html" class="nav-link" target="_blank">Spend</a>
             </li>
             <li class="nav-item d-lg-none">
-              <a href="./help/index.html" class="nav-link" target="_blank">Help</a>
+              <a href="./" class="nav-link" target="_blank">Help</a>
             </li>
 	  </ul>
 	</div>
