Adding audit to HTML help, minor JS tweaks.

--- a/public/index.html
+++ b/public/index.html
@@ -86,8 +86,13 @@
     want to check out
     the <a href="https://github.com/unchained-capital/ethereum-multisig"
     target="_blank">source code</a> for the smart contract (which
-    includes this dApp) on GitHub.  Unchained Capital is also
-    operating a <a href="https://www.unchained-capital.com/bounties"
+    includes this dApp) on GitHub.  This contract has been fully
+    audited by <a href="https://hosho.io" target="_blank">Hosho</a>
+    and you can read
+    the <a href="https://github.com/unchained-capital/ethereum-multisig/raw/master/audit/hosho_f40143e.pdf"
+    target="_blank">audit report</a> yourself. Unchained Capital is
+    also operating
+    a <a href="https://www.unchained-capital.com/bounties"
     target="_blank">bug bounty</a> around this contract & dApp.</p>
 
   </div>
@@ -102,6 +107,8 @@
 " target="_blank">Blog Post</a>
 	  <dt>Code</dt>
 	  <dd><a href="https://github.com/unchained-capital/ethereum-multisig" target="_blank">GitHub Repository</a>
+	  <dt>Hosho Audit</dt>
+	  <dd><a href="https://github.com/unchained-capital/ethereum-multisig/raw/master/audit/hosho_f40143e.pdf" target="_blank">Full Report</a>
 	  <dt>Suggest an improvement</dt>
 	  <dd><a href="https://github.com/unchained-capital/ethereum-multisig/issues" target="_blank">GitHub Issues</a>
 	  <dt>Report a bug?</dt>
