--- a/public/spend/index.html
+++ b/public/spend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="Ethereum Multisig" />
-    <title>Ethereum Multisig</title>
+    <title>Unchained Capital - Ethereum Multisig</title>
 
     <link rel="stylesheet" href="../css/dapp.css" />
 
@@ -25,7 +25,7 @@
       <div class="container">
 	<a class="navbar-brand" href="../index.html" target="_blank">
 	  <img src="../images/logo.png" alt="logo" /> 
-	  Ethereum Multisig <small>v2.0</small>
+	  Unchained Capital - Ethereum Multisig <small>v2.0</small>
 	</a>
 	<ul class="nav">
 	  <li class="nav-item d-none d-lg-inline-block">
